# bad-color-map

./: README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: generate_color_maps_lists.py
src/bad_color_map/: __init__.py  banana.npy  michel-levy-ProPhoto.npy  michel-levy-sRGB.npy  michel-levy.npy  original-highlighters.npy  painbow.npy  pastel-highlighters.npy
tests/: cielab.py  cielab_grid.py  comb.py  lightness.py  sine.py  test.py
